Bug 794725 - Don't report pointer movement when we re-enter application window. r=smaug